2007-08-17 arne

	* Unicode support for Windows (CFileSelector is not completely done yet)
	* CDrawContext::drawRect should draw the same now with Quartz and GDI+
	* initial fixes to support VSTGUI_FLOAT_COORDINATES for GDI+ (but there a many problems, so it's useless at the moment)
	
2007-08-05 arne

	* CSlider should work with non normalized values if you set setMinValue and setMaxValue

2007-07-28 arne

	* use compositing window on windows only if running under vista
	* fix a typo in CFrame::getBackBuffer() which leads to screen flicker under Windows XP
	* use frame window for CFileselector if ENABLE_VST_EXTENSION_IN_VSTGUI is zero
	* add fix from Julien for Drag&Drop from Internet Explorer 7
	* fix Logic 7 white rectangle drawing on editor close
	
2007-07-01 arne

	* added new method to CTabView to use custom control as tab switch button
	
2007-05-20 arne

	* fixed a bug in CViewContainer::onKeyDown/onKeyUp, method result was always -1
	
2007-03-31 arne

	* more on doxygen documentation
	* changed CTextEdit::setText (char* txt) to CTextEdit::setText (const char* txt)
	* changed typedef of CViewAttributeID to unsigned int from unsigned long
	
2007-03-25 arne

	* fix a TextEdit issue on Windows
	* fix a CVuMeter issue when using an Offscreen and no background bitmap (thanks to Boris)
	* CTooltipSupport for Windows (only XP or above)
	* many GDI+ fixes and enhancements (no need for libpng with GDI+ anymore)

2007-01-23 arne

	* merged stuff from timo and wolfram (mainly GDI+ stuff)
	* added some CRect methods

2006-12-15 arne

	* added copy constructors for all CView classes
	* changed back order of loose focus message in CTextEdit. Destroying of CTextEdit objects should be done in the parent view not in the controller.
	* added method CViewContainer::getContainerAt (const CPoint& p, bool deep) which returns the view container at point p.